[gd_scene load_steps=21 format=2]

[ext_resource path="res://Sprites/LittleJohn/spritesheet (2).png" type="Texture" id=1]
[ext_resource path="res://Scripts/LittleJohn.gd" type="Script" id=2]
[ext_resource path="res://SFX/explosion.mp3" type="AudioStream" id=3]
[ext_resource path="res://Entities/indicator.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 7, 9, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.6, 0.7, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../attack/BatAttack:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 18 )

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Walk"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "dead"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachine" id=13]
states/Walk/node = SubResource( 6 )
states/Walk/position = Vector2( 206, 24 )
states/attack/node = SubResource( 7 )
states/attack/position = Vector2( 642, -10 )
states/dead/node = SubResource( 8 )
states/dead/position = Vector2( 432, 402 )
transitions = [ "attack", "dead", SubResource( 9 ), "Walk", "dead", SubResource( 10 ), "Walk", "attack", SubResource( 11 ), "attack", "Walk", SubResource( 12 ) ]
start_node = "Walk"
end_node = "dead"
graph_offset = Vector2( -201.449, 121.477 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 7, 6 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 7, 14 )

[node name="LittleJohn" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.590909, 0.810653 )
texture = ExtResource( 1 )
hframes = 10
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/Idle = SubResource( 1 )
anims/Walk = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/dead = SubResource( 4 )

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2( -8, 8 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 14 )

[node name="indicator" parent="." instance=ExtResource( 5 )]

[node name="BatIndicator" parent="indicator" index="0"]
position = Vector2( 9, 8 )
shape = SubResource( 15 )

[node name="attack" type="Area2D" parent="."]

[node name="BatAttack" type="CollisionShape2D" parent="attack"]
position = Vector2( 9, 8 )
shape = SubResource( 16 )
disabled = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="indicator" to="." method="_on_indicator_body_entered"]
[connection signal="body_entered" from="attack" to="." method="_on_attack_body_entered"]

[editable path="indicator"]
